--- a/index.html
+++ b/index.html
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thiệp Cưới Lan & Nam</title>
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nguyễn Minh Nguyệt & Phạm Trung Sơn</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="overlay"></div>
-    <div class="content">
-      <h1>Lan & Nam</h1>
-      <p class="subtitle">Chúng tôi sắp kết hôn!</p>
-      <p id="countdown"></p>
-      <a href="#details" class="btn">Xem Chi Tiết</a>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="slideshow">
+      <img src="assets/img/0Q0A9304.JPG" alt="">
+      <img src="assets/img/0Q0A7971.JPG" alt="">
+      <img src="assets/img/0Q0A8088.JPG" alt="">
+      <img src="assets/img/0Q0A8626.JPG" alt="">
     </div>
-  </header>
-
-  <section id="details" class="details">
-    <h2>Thông Tin Lễ Cưới</h2>
-    <div class="info">
-      <div>
-        <h3>Nhà Gái</h3>
-        <p>Lan Nguyễn</p>
-        <p>Thời gian: 10:00 AM, 15/12/2025</p>
-        <p>Địa điểm: 123 Đường Hoa Phượng, Hà Nội</p>
-      </div>
-      <div>
-        <h3>Nhà Trai</h3>
-        <p>Nam Trần</p>
-        <p>Thời gian: 18:00 PM, 17/12/2025</p>
-        <p>Địa điểm: 456 Đường Trần Hưng Đạo, TP. HCM</p>
-      </div>
+    <div class="overlay">
+      <h1>Lễ Vu Quy</h1>
+      <h2>Nguyễn Minh Nguyệt & Phạm Trung Sơn</h2>
+      <p>25 . 12 . 2025</p>
     </div>
   </section>
 
-  <section class="gallery">
-    <h2>Album ảnh cưới</h2>
-    <div class="photos">
-      <img src="https://picsum.photos/id/1015/400/300" alt="Ảnh cưới 1">
-      <img src="https://picsum.photos/id/1025/400/300" alt="Ảnh cưới 2">
-      <img src="https://picsum.photos/id/1035/400/300" alt="Ảnh cưới 3">
+  <!-- Couple -->
+  <section class="couple">
+    <div class="person">
+      <img src="assets/img/codau.JPG" alt="Cô Dâu">
+      <h3>Nguyễn Minh Nguyệt</h3>
+      <p>Con ông: Nguyễn Văn Công & bà: Đỗ Thị Bích Thủy</p>
+    </div>
+    <div class="heart">💖</div>
+    <div class="person">
+      <img src="assets/img/chure.JPG" alt="Chú Rể">
+      <h3>Phạm Trung Sơn</h3>
+      <p>Con ông: Lê Văn C & bà: Phạm Thị D</p>
     </div>
   </section>
 
+  <!-- Album -->
+  <section class="album">
+    <img src="assets/img/0Q0A7971.JPG" alt="">
+    <img src="assets/img/0Q0A8088.JPG" alt="">
+    <img src="assets/img/0Q0A8626.JPG" alt="">
+    <img src="assets/img/0Q0A8944.JPG" alt="">
+    <img src="assets/img/0Q0A7971.JPG" alt="">
+    <img src="assets/img/0Q0A8088.JPG" alt="">
+  </section>
+
+  <!-- Info -->
+  <section class="info">
+    <h2>Thời gian & Địa điểm</h2>
+    <p>Lễ cưới được tổ chức vào lúc 10:30 ngày 25/12/2025</p>
+    <p>Tại: Nhà hàng Hồng Phúc, 123 Trần Hưng Đạo, TP.HCM</p>
+  </section>
+
+  <!-- QR -->
+  <section class="qr">
+    <div>
+      <h4>QR Cô Dâu</h4>
+      <img src="images/qr_codau.png" alt="QR Cô Dâu">
+    </div>
+    <div>
+      <h4>QR Chú Rể</h4>
+      <img src="images/qr_chure.png" alt="QR Chú Rể">
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>Hẹn gặp bạn tại ngày trọng đại của chúng tôi 💖</p>
+    <p>Phạm Trung Sơn 💕 Nguyễn Minh Nguyệt</p>
+    <p>Cảm ơn vì đã đến chung vui cùng chúng tôi!</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
