--- a/index.html
+++ b/index.html
@@ -1,77 +1,155 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nguyễn Minh Nguyệt & Phạm Trung Sơn</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="slideshow">
-      <img src="assets/img/0Q0A9304.JPG" alt="">
-      <img src="assets/img/0Q0A7971.JPG" alt="">
-      <img src="assets/img/0Q0A8088.JPG" alt="">
-      <img src="assets/img/0Q0A8626.JPG" alt="">
-    </div>
-    <div class="overlay">
-      <h1>Lễ Vu Quy</h1>
-      <h2>Nguyễn Minh Nguyệt & Phạm Trung Sơn</h2>
-      <p>25 . 12 . 2025</p>
-    </div>
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Thiệp cưới Sơn & Nguyệt</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script&family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <!-- Couple -->
-  <section class="couple">
-    <div class="person">
-      <img src="assets/img/codau.JPG" alt="Cô Dâu">
-      <h3>Nguyễn Minh Nguyệt</h3>
-      <p>Con ông: Nguyễn Văn Công & bà: Đỗ Thị Bích Thủy</p>
+  <body>
+    <!-- Hiệu ứng trái tim bay -->
+    <div class="hearts-container"></div>
+
+    <!-- Hero -->
+    <section class="hero">
+      <div class="slideshow">
+        <div
+          class="slide active"
+          style="background-image: url('assets/img/slider/sl1.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('assets/img/slider/sl2.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('assets/img/slider/sl3.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('assets/img/slider/sl4.jpg')"
+        ></div>
+        <div
+          class="slide"
+          style="background-image: url('assets/img/slider/sl5.jpg')"
+        ></div>
+      </div>
+      <div class="overlay">
+        <h1>Lễ Vu Quy</h1>
+        <h2>Phạm Trung Sơn & Nguyễn Minh Nguyệt</h2>
+        <p>30 . 11 . 2025</p>
+      </div>
+    </section>
+
+    <!-- Couple Section -->
+    <section class="couple-section">
+      <div class="couple-photos">
+        <div class="photo">
+          <img src="assets/img/chure.JPG" alt="Chú rể" />
+        </div>
+
+        <div class="divider">
+          <div class="line"></div>
+          <div class="heart">❤</div>
+        </div>
+
+        <div class="photo">
+          <img src="assets/img/codau.JPG" alt="Cô Dâu" />
+        </div>
+      </div>
+
+      <h2 class="couple-title">Và... Ngày ấy đã tới</h2>
+
+      <p class="couple-desc">
+        Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt – Ngày
+        cưới của chúng mình. Chúng mình muốn gửi đến bạn những lời cảm ơn sâu
+        sắc nhất và để bạn biết rằng chúng mình rất hạnh phúc khi thấy bạn ở đó.
+        Cảm ơn các bạn rất nhiều vì sự hiện diện cùng những lời chúc tốt đẹp mà
+        bạn đã dành cho chúng mình nha!
+      </p>
+
+      <h3 class="couple-names">Trung Sơn & Minh Nguyệt</h3>
+
+      <div class="parents">
+        <div>
+          <p>Con ông: <strong>Nguyễn Đình Kiên</strong></p>
+          <p>Con bà: <strong>Vũ Thị Hồng</strong></p>
+        </div>
+        <div>
+          <p>Con ông: <strong>Nguyễn Văn Công</strong></p>
+          <p>Con bà: <strong>Đỗ Thị Bích Thủy</strong></p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Album -->
+    <section class="album">
+      <h2 class="album-title">Album Ảnh Cưới</h2>
+      <div class="album-grid">
+        <img src="assets/img/album/1.jpg" alt="" />
+        <img src="assets/img/album/2.jpg" alt="" />
+        <img src="assets/img/album/3.jpg" alt="" />
+        <img src="assets/img/album/39.jpg" alt="" />
+        <img src="assets/img/album/4.jpg" alt="" />
+        <img src="assets/img/album/5.jpg" alt="" />
+        <img src="assets/img/album/6.jpg" alt="" />
+        <img src="assets/img/album/8.jpg" alt="" />
+        <img src="assets/img/album/9.jpg" alt="" />
+        <img src="assets/img/album/37.jpg" alt="" />
+        <img src="assets/img/album/10.jpg" alt="" />
+        <img src="assets/img/album/12.jpg" alt="" />
+        <img src="assets/img/album/13.jpg" alt="" />
+        <img src="assets/img/album/14.jpg" alt="" />
+        <img src="assets/img/album/16.jpg" alt="" />
+        <img src="assets/img/album/18.jpg" alt="" />
+        <img src="assets/img/album/22.jpg" alt="" />
+        <img src="assets/img/album/7.jpg" alt="" />
+        <img src="assets/img/album/11.jpg" alt="" />
+        <img src="assets/img/album/15.jpg" alt="" />
+        <img src="assets/img/album/19.jpg" alt="" />
+        <img src="assets/img/album/23.jpg" alt="" />
+        <img src="assets/img/album/30.jpg" alt="" />
+        <img src="assets/img/album/36.jpg" alt="" />
+      </div>
+    </section>
+
+    <!-- Info -->
+    <section class="info">
+      <h2>Thời gian & Địa điểm</h2>
+      <p>Lễ cưới được tổ chức vào lúc <strong>10:30 ngày 30/11/2025</strong></p>
+      <p>Tại: <strong>Nhà hàng Nam Định</strong></p>
+    </section>
+
+    <!-- QR -->
+    <section class="qr">
+      <div>
+        <h4>QR</h4>
+        <img src="assets/img/QR.jpg" alt="QR Cô Dâu" />
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>Phạm Trung Sơn 💕 Nguyễn Minh Nguyệt</p>
+      <p>Sự hiện diện của bạn là niềm hạnh phúc lớn lao đối với chúng tôi!</p>
+    </footer>
+
+    <div class="music-player">
+      <audio id="bgMusic" loop>
+        <source
+          src="assets/music/I Like You So Much, You’ll Know It.mp3"
+          type="audio/mpeg"
+        />
+        Trình duyệt của bạn không hỗ trợ phát nhạc.
+      </audio>
+      <button id="musicBtn">🎵</button>
     </div>
-    <div class="heart">💖</div>
-    <div class="person">
-      <img src="assets/img/chure.JPG" alt="Chú Rể">
-      <h3>Phạm Trung Sơn</h3>
-      <p>Con ông: Lê Văn C & bà: Phạm Thị D</p>
-    </div>
-  </section>
 
-  <!-- Album -->
-  <section class="album">
-    <img src="assets/img/0Q0A7971.JPG" alt="">
-    <img src="assets/img/0Q0A8088.JPG" alt="">
-    <img src="assets/img/0Q0A8626.JPG" alt="">
-    <img src="assets/img/0Q0A8944.JPG" alt="">
-    <img src="assets/img/0Q0A7971.JPG" alt="">
-    <img src="assets/img/0Q0A8088.JPG" alt="">
-  </section>
-
-  <!-- Info -->
-  <section class="info">
-    <h2>Thời gian & Địa điểm</h2>
-    <p>Lễ cưới được tổ chức vào lúc 10:30 ngày 25/12/2025</p>
-    <p>Tại: Nhà hàng Hồng Phúc, 123 Trần Hưng Đạo, TP.HCM</p>
-  </section>
-
-  <!-- QR -->
-  <section class="qr">
-    <div>
-      <h4>QR Cô Dâu</h4>
-      <img src="images/qr_codau.png" alt="QR Cô Dâu">
-    </div>
-    <div>
-      <h4>QR Chú Rể</h4>
-      <img src="images/qr_chure.png" alt="QR Chú Rể">
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>Phạm Trung Sơn 💕 Nguyễn Minh Nguyệt</p>
-    <p>Cảm ơn vì đã đến chung vui cùng chúng tôi!</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
